# VacuumCleaner3_WithSimulation

./: CMakeLists.txt  readme.md  visualize.py
algorithm/: AlgorithmRegistration.h
algorithm/Algo_DFS/: 212609440_322776063_DFS.cpp  212609440_322776063_DFS.h  CMakeLists.txt
algorithm/Algo_Spiral/: 212609440_322776063_SpiralCleaningAlgorithm.cpp  212609440_322776063_SpiralCleaningAlgorithm.h  CMakeLists.txt
common/: ConcreteBatteryMeter.cpp  ConcreteBatteryMeter.h  ConcreteDirtSensor.cpp  ConcreteDirtSensor.h  ConcreteWallSensor.cpp  ConcreteWallSensor.h  Logger.cpp  Logger.h
houses/: house1.house  house2.house  house3.house
simulator/: AlgorithmRegistrar.cpp  main.cpp  mySimulator.cpp  mySimulator.h
